horizontal scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
   font-family: "Inter", sans-serif;
   font-size: 14px;
   color: #000;
-  box-sizing: border-box;
+  box-sizing: border-box !important;
+  /* overflow-x: hidden; */
 }
 ul {
   list-style: none;
